testdata/baselines/reference/submodule/conformance/logicalAssignment4(target=es2015).errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
logicalAssignment4.ts(2,22): error TS2339: Property 'push' does not exist on type '{}'.
logicalAssignment4.ts(6,22): error TS2339: Property 'push' does not exist on type '{}'.
logicalAssignment4.ts(11,13): error TS2339: Property 'push' does not exist on type '{}'.
logicalAssignment4.ts(16,13): error TS2339: Property 'push' does not exist on type '{}'.
logicalAssignment4.ts(39,13): error TS18048: 'defaultValue' is possibly 'undefined'.
logicalAssignment4.ts(39,26): error TS2339: Property 'name' does not exist on type 'ThingWithOriginal | undefined'.
  Property 'name' does not exist on type 'undefined'.
logicalAssignment4.ts(45,13): error TS18048: 'defaultValue' is possibly 'undefined'.
logicalAssignment4.ts(45,26): error TS2339: Property 'name' does not exist on type 'ThingWithOriginal | undefined'.
  Property 'name' does not exist on type 'undefined'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== logicalAssignment4.ts (8 errors) ====
    function foo1(results: number[] | undefined) {
        (results ||= []).push(100);
                         ~~~~
!!! error TS2339: Property 'push' does not exist on type '{}'.
    }
    
    function foo2(results: number[] | undefined) {
        (results ??= []).push(100);
                         ~~~~
!!! error TS2339: Property 'push' does not exist on type '{}'.
    }
    
    function foo3(results: number[] | undefined) {
        results ||= [];
        results.push(100);
                ~~~~
!!! error TS2339: Property 'push' does not exist on type '{}'.
    }
    
    function foo4(results: number[] | undefined) {
        results ??= [];
        results.push(100);
                ~~~~
!!! error TS2339: Property 'push' does not exist on type '{}'.
    }
    
    interface ThingWithOriginal {
        name: string;
        original?: ThingWithOriginal
    }
    declare const v: number
    function doSomethingWithAlias(thing: ThingWithOriginal | undefined, defaultValue: ThingWithOriginal | undefined) {
        if (v === 1) {
            if (thing &&= thing.original) {
                thing.name;
            }
        }
        else if (v === 2) {
            if (thing &&= defaultValue) {
                thing.name;
                defaultValue.name
            }
        }
        else if (v === 3) {
            if (thing ||= defaultValue) {
                thing.name;
                defaultValue.name;
                ~~~~~~~~~~~~
!!! error TS18048: 'defaultValue' is possibly 'undefined'.
                             ~~~~
!!! error TS2339: Property 'name' does not exist on type 'ThingWithOriginal | undefined'.
!!! error TS2339:   Property 'name' does not exist on type 'undefined'.
            }
        }
        else {
            if (thing ??= defaultValue) {
                thing.name;
                defaultValue.name;
                ~~~~~~~~~~~~
!!! error TS18048: 'defaultValue' is possibly 'undefined'.
                             ~~~~
!!! error TS2339: Property 'name' does not exist on type 'ThingWithOriginal | undefined'.
!!! error TS2339:   Property 'name' does not exist on type 'undefined'.
            }
        }
    }
    